Remove static white background, fix for dark mode (#2050)

--- a/live-examples/css-examples/lists/list-style.css
+++ b/live-examples/css-examples/lists/list-style.css
@@ -11,14 +11,6 @@
     flex-direction: column;
 }
 
-.output section li {
-    background: #f1f8ff;
-}
-
-.output section ul.unhighlighted >li {
-    background: white;
-}
-
 .output hr {
     width: 50%;
     color: lightgray;
